# GBDebugger

./: CMakeLists.txt  LICENSE  README.md
example/: example.cpp
include/: DebuggerBackend.h  DebuggerTypes.h  GBDebugger.h  IDebuggerPanel.h
include/panels/: CPUStatePanel.h  ControlPanel.h  FlagsPanel.h  MemoryViewerPanel.h
src/: DebuggerBackend.cpp  GBDebugger.cpp
src/panels/: ControlPanel.cpp
test/: CMakeLists.txt  DataStructuresTest.cpp
